@@ -1,11 +1,13 @@
 package com.example.jwtauthorisedlogin.service;
 
 import com.example.jwtauthorisedlogin.Entity.Food;
+import com.example.jwtauthorisedlogin.Entity.FoodRating;
 import com.example.jwtauthorisedlogin.Entity.UserWishlist;
 //import com.example.jwtauthorisedlogin.payload.request.WishListGetRequest;
 import com.example.jwtauthorisedlogin.payload.request.WishlistDeleteRequest;
 import com.example.jwtauthorisedlogin.payload.request.WishlistRequest;
 import com.example.jwtauthorisedlogin.payload.response.MessageResponse;
+import com.example.jwtauthorisedlogin.repository.FoodRatingRepository;
 import com.example.jwtauthorisedlogin.repository.FoodRepository;
 import com.example.jwtauthorisedlogin.repository.UserRepository;
 import com.example.jwtauthorisedlogin.repository.UserWishlistRepository;
@@ -17,7 +19,9 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -27,6 +31,7 @@ public class WishlistService {
     private final UserWishlistRepository wishlistRepository;
     private final UserRepository userRepository;
     private final FoodRepository foodRepository;
+    private final FoodRatingRepository foodRatingRepository;
 
     public MessageResponse addToWishlist(WishlistRequest request) {
             Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
@@ -62,10 +67,35 @@ public class WishlistService {
         var user = userRepository.findByEmail(currentUser.getEmail()).orElse(null);
 
         assert user != null;
-        return wishlistRepository.findByUserEmail(user.getEmail())
-                .stream()
+        List<UserWishlist> wishlistItems = wishlistRepository.findByUserEmail(user.getEmail());
+        List<Food> wishlistFoods = wishlistItems.stream()
                 .map(UserWishlist::getFood)
-                .collect(Collectors.toList());
+                .toList();
+
+        List<FoodRating> allRatings = foodRatingRepository.findAll();
+
+        Set<Long> wishlistFoodItemIds = wishlistFoods.stream().map(Food::getId).collect(Collectors.toSet());
+
+        Set<Long> cartFoodItemIds = user.getCarts().stream()
+                .map(cart -> cart.getFoodId().getId())
+                .collect(Collectors.toSet());
+
+
+        Map<Long, Long> totalRatingsMap = allRatings.stream()
+                .filter(rating -> rating.getFoodItem() != null)
+                .filter(rating -> wishlistFoods.contains(rating.getFoodItem()))
+                .collect(Collectors.groupingBy(
+                        rating -> rating.getFoodItem().getId(),
+                        Collectors.counting()
+                ));
+
+        for (Food food : wishlistFoods) {
+            boolean isInCart = cartFoodItemIds.contains(food.getId());
+            food.setIsInCart(isInCart);
+            food.setNoOfRatings(totalRatingsMap.getOrDefault(food.getId(), 0L));
+        }
+
+        return wishlistFoods;
     }
 
     public MessageResponse deleteWishlistItem(WishlistDeleteRequest request) {
